--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "private": true,
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.0"
-  }
+  },
+  "type": "module"
 }
