--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "custom-env": "^2.0.2",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0"
