--- a/config/.env.local
+++ b/config/.env.local
@@ -1,4 +1,5 @@
 CONNECTION_STRING="mongodb://localhost:27017"
 PORT=80
 KEY="this is a key"
-
+TCP_SERVER_IP="192.168.64.128"
+URLS="www.example.com0,www.example.com1"
