--- a/config/.env.local
+++ b/config/.env.local
@@ -1,5 +1,5 @@
 CONNECTION_STRING="mongodb://localhost:27017"
 PORT=8989
 KEY="this is a key"
-TCP_SERVER_IP="127.0.0.1"
-URLS="www.example.com0,www.example.com1,www.example.com3"
+TCP_SERVER_IP="192.168.64.128"
+URLS="www.example.com0,www.example.com1,www.example.com3,www.example.com4"
